--- a/Verslag.tex
+++ b/Verslag.tex
@@ -16,6 +16,9 @@
 
 \chapter*{Preface}
 \phantomsection \addcontentsline{toc}{chapter}{Preface}
+Hallo, dit is de preface.
+
+
 \setcounter{page}{1}
 \pagenumbering{roman}
 %\include{Voorwoord}
