--- a/Verslag.tex
+++ b/Verslag.tex
@@ -1,4 +1,4 @@
-% !TeX spellcheck = en_GB
+% !TeX spellcheck = nl_NL
 \documentclass[11pt,a4paper,twoside,openright]{report} %,openright
 \usepackage{Verslag}
 \usepackage[english]{babel}
