--- a/Verslag.tex
+++ b/Verslag.tex
@@ -25,23 +25,33 @@
 %\phantomsection \addcontentsline{toc}{chapter}{Table of Contents}
 
 \listoffigures
-\phantomsection\addcontentsline{toc}{chapter}{List of Figures}
+\phantomsection\addcontentsline{toc}{chapter}{Lijst van Figuren}
 
 \listoftables
-\phantomsection\addcontentsline{toc}{chapter}{List of Tables}
+\phantomsection\addcontentsline{toc}{chapter}{Lijst of Tabellen}
 
-%List of Symbols And Abbreviations
-%\include{ListOfSymbols}
+%List of Symbols And Abbreviations %Hier zou eigenlijk een nomenclatuur moeten komen
+%\include{Nomenclatuur}
 
 %\include{Samenvatting}
 
-%Main Content
+%Body
 \cleardoublepage
 \setcounter{page}{1}
 \pagenumbering{arabic}
-%\include{Introduction}
+%\include{Introductie}
 
-%\include{Conclusion}
+%\include{ProbleemAnalyse}
+
+%\include{HuidigeOpstelling}
+
+%\include{ConceptOntwerp}
+
+%\include{ConceptKeuze}
+
+%\include{Uitwerking}
+
+%\include{Conclusie}
 
 %Appendix
 \cleardoublepage
