Opzet Probleem analyse
Positie af, maar snelheid moet nog plots en verwerkt worden.

--- a/Verslag.sty
+++ b/Verslag.sty
@@ -120,3 +120,10 @@
 
 \setcounter{tocdepth}{1} %Diepte van de TOC: 1.2 
 
+%% Tikz
+\usepackage{tikz,tikzscale,amsmath, amssymb,bm,color}
+%\usepackage[margin=0cm,nohead]{geometry}
+%\usepackage[active,tightpage]{preview}
+\usetikzlibrary{shapes,arrows}
+% needed for BB
+\usetikzlibrary{calc}
