--- a/Verslag.tex
+++ b/Verslag.tex
@@ -1,7 +1,7 @@
 % !TeX spellcheck = nl_NL
 \documentclass[11pt,a4paper,twoside,openright]{report} %,openright
 \usepackage{Verslag}
-\usepackage[english]{babel}
+\usepackage[dutch]{babel}
 
 %\title{Verslag titel}
 %\author{Groep 4}
@@ -28,7 +28,7 @@
 \phantomsection\addcontentsline{toc}{chapter}{Lijst van Figuren}
 
 \listoftables
-\phantomsection\addcontentsline{toc}{chapter}{Lijst of Tabellen}
+\phantomsection\addcontentsline{toc}{chapter}{Lijst van Tabellen}
 
 %List of Symbols And Abbreviations %Hier zou eigenlijk een nomenclatuur moeten komen
 %\include{Nomenclatuur}
@@ -41,7 +41,7 @@
 \pagenumbering{arabic}
 %\include{Introductie}
 
-%\include{ProbleemAnalyse}
+\include{ProbleemAnalyse}
 
 %\include{HuidigeOpstelling}
 
