--- a/Analyse_huidige_situatie.tex
+++ b/Analyse_huidige_situatie.tex
@@ -20,6 +20,11 @@ Bij het gebruiken van twee bladveren treedt er shortening op, dit wil zeggen dat
 y=\frac{-0.6x^2}{l}
 \end{equation}
 Als maximale uitwijking van het systeem is 7.5mm genomen, volgens figuur ... blijkt dat het shortening effect minimaal is, dus wordt gekozen voor verwaarlozing van het shortening effect. 
+\begin{figure}[h]
+\caption{Daling Blokje door Shortening}
+\centering
+\includegraphics[width=0.5\textwidth]{Shortening.png}
+\end{figure}
 
 \subsection{Systeemresponsie}
 Met behulp van een van de beschikbaar gestelde opstellingen (opstelling 12) is de stapresponsie \textbf{(afbeelding)} bepaald met behulp van een blokvormig signaal
