--- a/Analyse_huidige_situatie.tex
+++ b/Analyse_huidige_situatie.tex
@@ -5,6 +5,7 @@
 \usepackage{graphicx}
 \usepackage{amsmath}
 \usepackage{amssymb}
+\graphicspath{{./Images/}}
 
 \begin{document}
 
@@ -21,24 +22,24 @@ y=\frac{-0.6x^2}{l}
 \end{equation}
 Als maximale uitwijking van het systeem is 7.5mm genomen, volgens figuur ... blijkt dat het shortening effect minimaal is, dus wordt gekozen voor verwaarlozing van het shortening effect. 
 \begin{figure}[h]
-\caption{Daling Blokje door Shortening}
 \centering
-\includegraphics[width=0.5\textwidth]{Shortening.png}
+\includegraphics[width=0.75\textwidth]{Shortening.png}
+\caption{Daling Blokje door Shortening}
 \end{figure}
 
 \subsection{Systeemresponsie}
 Met behulp van een van de beschikbaar gestelde opstellingen (opstelling 12) is de stapresponsie \textbf{(afbeelding)} bepaald met behulp van een blokvormig signaal
-%\begin{figure}[h]
-%\caption{Het gebruikte blokvormig signaal}
-%  \centering
- %   \includegraphics[width=0.5\textwidth]{Inputsignaal.png}
-%\end{figure}
+\begin{figure}[h]
+  \centering
+    \includegraphics[width=0.75\textwidth]{Inputsignaal.png}
+    \caption{Het gebruikte blokvormig signaal}
+\end{figure}
 
-%\begin{figure}[h]
-%\caption{Representatieve stapresponsie met data-markers}
-%  \centering
- %   \includegraphics[width=0.5\textwidth]{Stapresponsie.png}
-%\end{figure}
+\begin{figure}[h]
+  \centering
+    \includegraphics[width=0.95\textwidth]{Opstelling_12_stapresponsie.png}
+    \caption{Representatieve stapresponsie met data-markers}
+\end{figure}
 
 Het bestaande systeem kan benaderd worden met een gedempt massa-veersysteem, De responsie van dit systeem kan vervolgens gemodeleerd worden met een tweede orde overdrachtsfunctie. 
 \begin{equation}
