--- a/Analyse_huidige_situatie.tex
+++ b/Analyse_huidige_situatie.tex
@@ -20,8 +20,9 @@ Bij het gebruiken van twee bladveren treedt er shortening op, dit wil zeggen dat
 \begin{equation}
 y=\frac{-0.6x^2}{l}
 \end{equation}
-Als maximale uitwijking van het systeem is 7.5mm genomen, volgens figuur ... blijkt dat het shortening effect minimaal is, dus wordt gekozen voor verwaarlozing van het shortening effect. 
+Als maximale uitwijking van het systeem is 7.5mm genomen, volgens figuur \ref{Shortening} blijkt dat het shortening effect dan 1.3mm is. Echter is voor de exacte volging van de VCM, alleen een translatie in de x-richting gewenst. Door shortening vindt echter ook een kleine beweging in de y-richting plaats. Om deze beweging zoveel mogelijk te neutraliseren zou er een constructie moeten komen die shortening tegen gaat. 
 \begin{figure}[h]
+\label{Shortening}
 \centering
 \includegraphics[width=0.75\textwidth]{Shortening.png}
 \caption{Daling Blokje door Shortening}
@@ -31,7 +32,7 @@ Als maximale uitwijking van het systeem is 7.5mm genomen, volgens figuur ... bli
 Met behulp van een van de beschikbaar gestelde opstellingen (opstelling 12) is de stapresponsie \textbf{(afbeelding)} bepaald met behulp van een blokvormig signaal
 \begin{figure}[h]
   \centering
-    \includegraphics[width=0.75\textwidth]{Inputsignaal.png}
+    \includegraphics[width=0.55\textwidth]{Inputsignaal.png}
     \caption{Het gebruikte blokvormig signaal}
 \end{figure}
 
