eigenfreq en conc

--- a/Analyse_huidige_situatie.tex
+++ b/Analyse_huidige_situatie.tex
@@ -85,10 +85,10 @@ Dit geeft $k_1=864$$N/m$, $k_2=256$$N/m$, invullen in \ref{Eigenfrequentie1} gee
 \end{equation} 
 Dit geeft een totale dempingscoefficient van 5.6$Ns/m$.\\
 
-
-
 \subsection{Eigenfrequenties}
-
+Een van de belangrijkere systeemeigenschappen zijn de eigenfrequenties van het systeem. Het is wenselijk om de 1ste eigenfrequentie (van de ontworpen beweging) zo laag mogelijk te maken, terwijl de hogere eigenfrequenties zo hoog mogelijk gemaakt worden om ongewenste bewegingen te onderdrukken. Het huidige systeem is in Spacar gemodeleerd, en in figuren ()etc zijn de berekende eigenfrequenties te zien. Te zien valt dat de eerste eigenfrequentie overeenkomt met de eerder berekende, terwijl de hogere eigenfrequentie 130 resp 245 Herz zijn.
 \subsection{Conclusies en aanbevelingen}
+Een van de nadelen van het oude systeem is dat door het gebruik van twee bladveren het systeem overbepaald is wat zorgt voor ongewenste spanningen in de veren. \\ Tijdens experimenten zijn twee problemen duidelijk geworden, namelijk dat het systeem redelijk gevoelig is voor lompe studenten, waardoor de bladveren schuin komen te zitten, en het systeem klemt. Maar ook dat het systeem zeer gevoelig is invloeden van buitenaf (dit viel te zien in pieken als de opstellingstafel werd geraakt).  \\
+
 
 \end{document}
