Verandering png naar tikz

--- a/Analyse_huidige_situatie.tex
+++ b/Analyse_huidige_situatie.tex
@@ -1,15 +1,16 @@
 \documentclass[a4paper]{article}
 \usepackage[dutch]{babel}
-\usepackage{eurosym}
-\usepackage{hyperref}
-\usepackage{graphicx}
-\usepackage{amsmath}
-\usepackage{amssymb}
-\graphicspath{{./Images/}}
+%\usepackage{eurosym}
+%\usepackage{hyperref}
+%\usepackage{graphicx}
+%\usepackage{amsmath}
+%\usepackage{amssymb}
+%\graphicspath{{./Images/}}
+\usepackage{verslag}
 
 \begin{document}
 
-\section{Analyse oude syteem}
+\section{Analyse oude systeem}
 In dit hoofdstuk worden de mechanische aspecten en responsie van het oude mechanisme afgeleid en behandeld. Aan het einde van dit hoofdstuk worden conclusies getrokken over de sterke en zwakke punten van het huidige systeem.
 
 \subsection{Algemene informatie}
@@ -24,7 +25,9 @@ Als maximale uitwijking van het systeem is 7.5mm genomen, volgens figuur \ref{Sh
 \begin{figure}[h]
 \label{Shortening}
 \centering
-\includegraphics[width=0.75\textwidth]{Shortening.png}
+\setlength\figureheight{5cm}
+\setlength\figurewidth{0.9\textwidth}
+\includegraphics[width=0.75\textwidth]{Shortening.tikz}
 \caption{Daling Blokje door Shortening}
 \end{figure}
 
