--- a/ProbleemAnalyse/PositieBepalingLens.tex
+++ b/ProbleemAnalyse/PositieBepalingLens.tex
@@ -1,13 +1,13 @@
 \section{Beweging van de lens}
 Zodat de camera tijdens de volledige beweging van het mechanisme een scherp beeld heeft van het opgeraapte voorwerp moet de lens gedurende de hele slag op de juiste positie zijn. Dit zorg er voor dat het beeldpunt van de lens op de zelfde plek blijft. 
-\begin{figure}[h]
+\begin{figure}%[h]
 \centering
 \includegraphics{/tikz/Opstelling.tikz}
 \caption{Dimensies Opstelling}
 \label{fig:Opstelling}
 \end{figure}
 
-De positie van de lens wordt met de lenzen formule bepaald, als functie van de positie van het object (\ref{equ:y1(y2)}). Door deze funcite te differentieeren is de snelheid van de lens uit te drukken in de positie en snelheid van het object (\ref{equ:v1(v2,y2)}). 
+De positie van de lens wordt met de lenzen formule bepaald, als functie van de positie van het object~(\ref{equ:y1(y2)}). Door deze funcite te differentieeren is de snelheid van de lens uit te drukken in de positie en snelheid van het object~(\ref{equ:v1(v2,y2)}). 
 
 \begin{align*}
 \frac{1}{f}&=\frac{1}{b}+\frac{1}{v}	&	b&=b_{0}+y_{1} \\
@@ -34,9 +34,24 @@ Door waardes in te vullen voor de begin lens afstand($b_0$), de minimale afstand
 \label{fig:SlagLensuitwijking}
 \end{figure}
 
-Om de beweging van de lens verder te beschrijven moet er meer bekend zijn over hoe het object zijn pad vervolgt. Aangenomen is dat het object met een constante versnelling ($a$) een bepaalde maximale snelheid behaalt ($v_e$) en dan met een gelijke vertraging ($-a$) tot stilstand komt. Met deze gegevens wordt het snelheidsprofiel van zowel het object als de lens beschreven
+Om de beweging van de lens verder te beschrijven moet er meer bekend zijn over hoe het object zijn pad vervolgt. Aangenomen is dat het object met een constante versnelling ($a$) een bepaalde maximale snelheid behaalt ($v_e$) en dan met een gelijke vertraging ($-a$) tot stilstand komt. Met deze gegevens wordt het snelheidsprofiel van zowel het object als de lens beschreven zoals weergeven in figuur~\ref{fig:Snelheidprofiel}.
 
-%SubPlots
+\begin{figure}
+\centering
+\begin{subfigure}[t]{0.45\textwidth}
+	\setlength\figureheight{5cm} 
+	\setlength\figurewidth{.9\textwidth}
+	\includegraphics[width=\textwidth]{tikz/SlagV1V2.tikz}
+\end{subfigure}~
+\begin{subfigure}[b]{0.45\textwidth}
+	\setlength\figureheight{5cm} 
+	\setlength\figurewidth{.9\textwidth}
+	\includegraphics[width=\textwidth]{tikz/UitwijkingV1.tikz}
+\end{subfigure}
+\caption{Snelheidsprofiel van de lens en het voorwerp.}
+\label{fig:Snelheidprofiel}
+\end{figure}
+
 
 %Is het mogelijk een plot te krijgen van de snelheid van de lens tegen zijn positie? Data punten overlap of iets lelijks like that. 
 
