--- a/Verslag.tex
+++ b/Verslag.tex
@@ -18,7 +18,7 @@
 \phantomsection \addcontentsline{toc}{chapter}{Preface}
 \setcounter{page}{1}
 \pagenumbering{roman}
-%\include{Voorwoord}
+\include{Voorwoord}
 
 
 \tableofcontents
@@ -40,8 +40,9 @@
 \setcounter{page}{1}
 \pagenumbering{arabic}
 %\include{Introduction}
-
-%\include{Conclusion}
+\include{Analyseoudesysteem}
+\include{Concepten}
+\include{Conceptkeuze}
 
 %Appendix
 \cleardoublepage
