--- a/Analyse_huidige_situatie.tex
+++ b/Analyse_huidige_situatie.tex
@@ -14,8 +14,7 @@
 In dit hoofdstuk worden de mechanische aspecten en responsie van het oude mechanisme afgeleid en behandeld. Aan het einde van dit hoofdstuk worden conclusies getrokken over de sterke en zwakke punten van het huidige systeem.
 
 \subsection{Algemene informatie}
-(plaatje van opstelling met maten(SW)) \\
-Zoals hierboven te zien is, bestaat de huidige rechtgeleiding uit twee verschillende bladveren met maten respectievelijk 38x3x0.30 en 58.70x5x0.30mm ,van staal die samen ervoor zorgen dat de rechtgeleiding met een bepaalde slag kan bewegen. Verder valt gelijk op te merken dat door het gebruik van twee bladveren het systeem overbepaald is. Bij het analyseren van het systeem wordt duidelijk dat er 1  translerende vrijheidsgraad is in de x-richting. Twee bladveren zorgen voor 3x2$=$6 vastgelegde vrijheidsgraden, dus 5-1=1 overbepaaldheid. 
+De huidige rechtgeleiding bestaat uit twee verschillende bladveren met maten respectievelijk 38x3x0.30 en 58.70x5x0.30mm ,van staal die samen ervoor zorgen dat de rechtgeleiding met een bepaalde slag kan bewegen. Verder valt gelijk op te merken dat door het gebruik van twee bladveren het systeem overbepaald is. Bij het analyseren van het systeem wordt duidelijk dat er 1  translerende vrijheidsgraad is in de x-richting. Twee bladveren zorgen voor 3x2$=$6 vastgelegde vrijheidsgraden, dus 5-1=1 overbepaaldheid. 
 
 \begin{figure}[h]
 \label{Overbepaaldheid}
